src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Dynegy</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed NA</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Sent</fullName>
        </values>
        <values>
            <fullName>Credit Review</fullName>
        </values>
        <values>
            <fullName>Hold</fullName>
        </values>
        <values>
            <fullName>Indicative Pricing Sent</fullName>
        </values>
        <values>
            <fullName>Negotiating Contract</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Quote Requested</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AGREEMENT__c</fullName>
        <formula>IF(  AND( Account.Supplier__r.Name==&apos;Dynegy Energy Services East, LLC&apos; ),
&apos;ELECTRIC SERVICE AGREEMENT – EXHIBIT A – VARIABLE PRICING&apos;,

 IF(AND( Account.Supplier__r.Name ==  &apos;Illinois Power Marketing d/b/a Homefield Energy&apos;), 
&apos;ELECTRIC SERVICE AGREEMENT – EXHIBIT A&apos;,

IF(AND( Account.Supplier__r.Name ==&apos;Dynegy Energy Services, LLC&apos;), 
&apos;ELECTRIC SERVICE AGREEMENT – EXHIBIT A&apos;,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGREEMENT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Annual_Usage_Sum_MHw__c</fullName>
        <formula>Acct_Annual_Usage_Sum__c  / 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Annual Usage MWH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acct_Annual_Usage_Sum__c</fullName>
        <description>The total Annual usage for all of the LDC Accounts on the Opportunity.</description>
        <inlineHelpText>The total Annual usage for all of the LDC Accounts on the Opportunity.</inlineHelpText>
        <label>Opportunity Annual Usage KWH</label>
        <summarizedField>Opportunity_LDC__c.LDC_Annual_Usage__c</summarizedField>
        <summaryForeignKey>Opportunity_LDC__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Win_Loss_Comments__c</fullName>
        <label>Closed Win/Loss Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Count_of_LDC_Account__c</fullName>
        <description>This field is created during iAve conversion for count of Opportunity LDC&apos;s</description>
        <label>Count of LDC Account</label>
        <summaryForeignKey>Opportunity_LDC__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credit_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Notes__c</fullName>
        <label>Credit Check Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Required__c</fullName>
        <formula>OR(Max_60_Day_Max_Exposure__c &gt;= 375000, Max_Aggregate_PLC__c &gt;= 5000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Check Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA_Approval_Modified_By__c</fullName>
        <label>DOA Approval Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOA_Approval_Modified_Date__c</fullName>
        <label>DOA Approval Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOA_Approval_Required__c</fullName>
        <formula>Max_Notional_Value__c  &gt; 10000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOA Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DOA Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DOA Approver</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
            <filterItems>
                <field>User.Email</field>
                <operation>equals</operation>
                <value>christopher.sill@dynegy.com</value>
            </filterItems>
            <filterItems>
                <field>User.Email</field>
                <operation>equals</operation>
                <value>raymond.culver@dynegy.com</value>
            </filterItems>
            <filterItems>
                <field>User.Email</field>
                <operation>equals</operation>
                <value>mark.t.fanning@dynegy.com</value>
            </filterItems>
            <filterItems>
                <field>User.Email</field>
                <operation>equals</operation>
                <value>laura.hrehor2@dynegy.com</value>
            </filterItems>
            <filterItems>
                <field>User.Email</field>
                <operation>equals</operation>
                <value>sheree.petrone2@dynegy.com</value>
            </filterItems>
            <filterItems>
                <field>User.Email</field>
                <operation>equals</operation>
                <value>robert.c.flexon2@dynegy.com</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electric_Distribution_Utility__c</fullName>
        <formula>CASE( Service_Territory__c , 
&quot;DAYTON&quot;, &quot;Dayton Power &amp; Light&quot;, 
&quot;DEOHIO&quot;, &quot;Duke Energy&quot;, 
&quot;FEOHIO&quot;, &quot;First Energy&quot;, 
&quot;AEPOHIO&quot;, &quot;American Electric Power&quot;, 
&quot;COMED-IL&quot;, &quot;ComEd&quot;, 
&quot;AMEREN-IL&quot;, &quot;Ameren Illinois&quot;,
&quot;Duquesne - PA&quot;,&quot;Duquesne Light Company&quot;,
&quot;MetEd - PA&quot;, &quot;Metropolitan Edison Company&quot;,
&quot;PECO - PA&quot;, &quot;PECO Energy Company&quot;,
&quot;Penelec - PA&quot;, &quot;Pennsylvania Electric Company&quot;,
&quot;FEWP&quot;, &quot;West Penn Power Company&quot;,
&quot;PPL - PA&quot;, &quot;PPL Eletcric Utilities&quot;,
&quot;Penn Power - PA&quot;, &quot;Pennsylvania Power Company&quot;,
&quot;UGI - PA&quot;, &quot;UGI Utilities, Inc.&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electric Distribution Utility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Sent_for_Credit_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This filed avoids duplicate emails send for credit check</description>
        <label>Email Sent for Credit Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executable_Quote_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executable Quote Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Footer_logo__c</fullName>
        <formula>Account.Supplier__r.Footer_logo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Footer logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_logo__c</fullName>
        <formula>Account.Supplier__r.Header_logo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Header logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Individual_Info__c</fullName>
        <label>LDC Individual Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_60_Day_Max_Exposure__c</fullName>
        <label>Max 60 Day Max Exposure</label>
        <summarizedField>Retail_Quote__c.X60_Day_Max_Exposure__c</summarizedField>
        <summaryForeignKey>Retail_Quote__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Aggregate_PLC__c</fullName>
        <inlineHelpText>kW</inlineHelpText>
        <label>Max Aggregate PLC</label>
        <summarizedField>Retail_Quote__c.Aggregate_PLC__c</summarizedField>
        <summaryForeignKey>Retail_Quote__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Notional_Value__c</fullName>
        <label>Max Notional Value</label>
        <summarizedField>Retail_Quote__c.Notional_Value__c</summarizedField>
        <summaryForeignKey>Retail_Quote__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OPCO_Service_Territory__c</fullName>
        <formula>Account.Supplier__r.Supplier_DUNS__c +&apos;-&apos;+ text(Service_Territory__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OPCO_Service_Territory_Conga</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <label>Offer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Indicative</fullName>
                </value>
                <value>
                    <fullName>Executable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Blend &amp; Extend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Desk_Contact__c</fullName>
        <label>Pricing Desk Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Due_Date__c</fullName>
        <label>Pricing Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <label>Pricing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Refresh</fullName>
                </value>
                <value>
                    <fullName>Addendum Account Add</fullName>
                </value>
                <value>
                    <fullName>Addendum Product Change</fullName>
                </value>
                <value>
                    <fullName>Addendum Block Purchase</fullName>
                </value>
                <value>
                    <fullName>Addendum % Energy Purchase</fullName>
                </value>
                <value>
                    <fullName>Amendment Extend Term</fullName>
                </value>
                <value>
                    <fullName>Amendment Drop Account</fullName>
                </value>
                <value>
                    <fullName>Renewal Evergreen</fullName>
                </value>
                <value>
                    <fullName>Renewal MTM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Stage__c</fullName>
        <label>Quote Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Indicative</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RTO__c</fullName>
        <formula>CASE( Service_Territory__c , 
&quot;DAYTON&quot;, &quot;PJM&quot;, 
&quot;DEOHIO&quot;, &quot;PJM&quot;, 
&quot;FEOHIO&quot;, &quot;PJM&quot;, 
&quot;AEPOHIO&quot;, &quot;PJM&quot;, 
&quot;COMED-IL&quot;, &quot;PJM&quot;, 
&quot;AMEREN-IL&quot;, &quot;MISO&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RTO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Broker</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>ABC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refresh_Expiration_Date__c</fullName>
        <description>Refresh Expiration Date</description>
        <label>Refresh Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created during the iAve Conversion</description>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <label>Service Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Pricing_Instructions__c</fullName>
        <label>Special Pricing Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_stage__c</fullName>
        <label>Sub-stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Bid</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Rate</fullName>
                </value>
                <value>
                    <fullName>Renewal Rejected</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Tenor</fullName>
                </value>
                <value>
                    <fullName>Billing Issues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Contact__c</fullName>
        <formula>Account.Supplier__r.Supplier_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_DUNS__c</fullName>
        <formula>Account.Supplier__r.Supplier_DUNS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Price__c</fullName>
        <inlineHelpText>($/kWh)</inlineHelpText>
        <label>Target Price</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Accounts__c</fullName>
        <label>Total Accounts</label>
        <summaryForeignKey>Opportunity_LDC__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Workbook_Location__c</fullName>
        <label>Workbook Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Amendements</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Amendment</value>
        </filters>
        <label>Amendements</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Amendment</fullName>
        <active>true</active>
        <businessProcess>Dynegy</businessProcess>
        <description>Used to create an Amendment Opportunity</description>
        <label>Amendment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Dynegy</businessProcess>
        <description>Used to create a standard opportunity</description>
        <label>Standard Opportunity</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Closed_Comments</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( StageName , &apos;Closed Lost&apos;) &amp;&amp; ISBLANK( Closed_Win_Loss_Comments__c ) &amp;&amp; ! ISCHANGED( Acct_Annual_Usage_Sum__c )&amp;&amp; ! ISCHANGED(  Acct_Annual_Usage_Sum_MHw__c) &amp;&amp; ! ISCHANGED( LDC_Individual_Info__c), true, false)</errorConditionFormula>
        <errorDisplayField>Closed_Win_Loss_Comments__c</errorDisplayField>
        <errorMessage>Enter the Close Win/Loss comments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pricing_Due_date_greater_than_today</fullName>
        <active>false</active>
        <description>This validation will not allow user to enter a date that is less than today</description>
        <errorConditionFormula>AND(! ISCHANGED( Acct_Annual_Usage_Sum__c ) ,! ISCHANGED(  Acct_Annual_Usage_Sum_MHw__c ) ,Pricing_Due_Date__c &lt; TODAY() ,     ! ISCHANGED( LDC_Individual_Info__c ) )</errorConditionFormula>
        <errorMessage>Pricing due date must be equal or greater than today&apos;s date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Substage_Required_For_Closed_Lost</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( StageName , &apos;Closed Lost&apos;) &amp;&amp; ISPICKVAL( Sub_stage__c , &apos;&apos;) &amp;&amp; ! ISCHANGED( LDC_Individual_Info__c ), true,false)</errorConditionFormula>
        <errorMessage>Please Select Sub-Stage for Closed Lost</errorMessage>
    </validationRules>
</CustomObject>